--- a/src/index.html
+++ b/src/index.html
@@ -9,7 +9,7 @@
   <meta name="description" content="best template, template free, responsive theme, fashion store, responsive theme, responsive html theme, Premium website templates, web templates, Multi-Purpose Responsive HTML5 Template">
   <meta name="keywords" content="bootstrap, ecommerce, fashion, layout, responsive, responsive template, responsive template download, responsive theme, retail, shop, shopping, store, Premium website templates, web templates, Multi-Purpose Responsive HTML5 Template"/>
   <!-- CSS Style -->
-  <http://fonts.googleapis.com/css?family=Open+Sans:400,600,300,800,700,400italic" rel='stylesheet' type='text/css'>
+  <link http://fonts.googleapis.com/css?family=Open+Sans:400,600,300,800,700,400italic" rel='stylesheet' type='text/css'>
   <link https://fonts.googleapis.com/css?family=Roboto:400,400italic,500,500italic,700' rel='stylesheet' type='text/css'>
   <link https://fonts.googleapis.com/css?family=Poppins:400,300,500,600,700' rel='stylesheet' type='text/css'>
   <link http://fonts.googleapis.com/css?family=Montserrat:400,700' type='text/css'>
