--- a/src/index.html
+++ b/src/index.html
@@ -9,14 +9,18 @@
   <meta name="description" content="best template, template free, responsive theme, fashion store, responsive theme, responsive html theme, Premium website templates, web templates, Multi-Purpose Responsive HTML5 Template">
   <meta name="keywords" content="bootstrap, ecommerce, fashion, layout, responsive, responsive template, responsive template download, responsive theme, retail, shop, shopping, store, Premium website templates, web templates, Multi-Purpose Responsive HTML5 Template"/>
   <!-- CSS Style -->
-  <http://fonts.googleapis.com/css?family=Open+Sans:400,600,300,800,700,400italic" rel='stylesheet' type='text/css'>
+  <link http://fonts.googleapis.com/css?family=Open+Sans:400,600,300,800,700,400italic" rel='stylesheet' type='text/css'>
   <link https://fonts.googleapis.com/css?family=Roboto:400,400italic,500,500italic,700' rel='stylesheet' type='text/css'>
   <link https://fonts.googleapis.com/css?family=Poppins:400,300,500,600,700' rel='stylesheet' type='text/css'>
   <link http://fonts.googleapis.com/css?family=Montserrat:400,700' type='text/css'>
-  <link rel="stylesheet" type="text/html" href="./style.css">
+  <link rel="stylesheet" type="text/html" href="styles.css">
 </head>
 <body class="cms-index-index cms-home-page">
 <app-root></app-root>
+
+
+</body>
+
 <!-- JS --> 
 <!-- jquery js --> 
 <script type="text/javascript" src="./assets/js/jquery.min.js"></script> 
@@ -25,8 +29,9 @@
 <script type="text/javascript" src="./assets/js/bootstrap.min.js"></script> 
 
 <!-- owl.carousel.min js --> 
-<script type="text/javascript" src="./assets/js/owl.carousel.min.js"></script> 
+<!-- <script type="text/javascript" src="./assets/js/owl.carousel.min.js"></script> 
 
+<script type="text/javascript" src="./assets/js/owl.carousel.rtl.js"></script>  -->
 <!-- jquery.mobile-menu js --> 
 <script type="text/javascript" src="./assets/js/mobile-menu.js"></script> 
 
@@ -34,7 +39,7 @@
 <script type="text/javascript" src="./assets/js/jquery-ui.js"></script> 
 
 <!-- main js --> 
-<script type="text/javascript" src="../assets/js/main.js"></script> 
+<!-- <script type="text/javascript" src="./assets/js/main.js"></script>  -->
 
 <!-- countdown js --> 
 <script type="text/javascript" src="./assets/js/countdown.js"></script> 
@@ -114,5 +119,4 @@
       });
   });
 </script>
-</body>
 </html>
