--- a/src/index.html
+++ b/src/index.html
@@ -14,9 +14,13 @@
   <link https://fonts.googleapis.com/css?family=Poppins:400,300,500,600,700' rel='stylesheet' type='text/css'>
   <link http://fonts.googleapis.com/css?family=Montserrat:400,700' type='text/css'>
   <link rel="stylesheet" type="text/html" href="./style.css">
+  <script type="text/javascript" src="./assets/js/jquery.min.js"></script> 
 </head>
 <body class="cms-index-index cms-home-page">
 <app-root></app-root>
+  
+<!-- Slider Js --> 
+<script type="text/javascript" src="./assets/js/revolution-slider.js"></script> 
 <!-- JS --> 
 <!-- jquery js --> 
 <script type="text/javascript" src="./assets/js/jquery.min.js"></script> 
@@ -34,14 +38,14 @@
 <script type="text/javascript" src="./assets/js/jquery-ui.js"></script> 
 
 <!-- main js --> 
-<script type="text/javascript" src="../assets/js/main.js"></script> 
+<!-- <script type="text/javascript" src="../assets/js/main.js"></script>  -->
 
 <!-- countdown js --> 
 <script type="text/javascript" src="./assets/js/countdown.js"></script> 
 
 <!-- Slider Js --> 
 <script type="text/javascript" src="./assets/js/revolution-slider.js"></script> 
-<script type='text/javascript'>
+<!-- <script type="text/javascript">
   jQuery(document).ready(function(){
       jQuery('#rev_slider_4').show().revolution({
           dottedOverlay: 'none',
@@ -113,6 +117,6 @@
           fullScreenOffsetContainer: ''
       });
   });
-</script>
+</script> -->
 </body>
 </html>
