--- a/src/index.html
+++ b/src/index.html
@@ -15,6 +15,7 @@
   <link http://fonts.googleapis.com/css?family=Montserrat:400,700' type='text/css'>
   <link rel="stylesheet" type="text/html" href="./style.css">
   <script type="text/javascript" src="./assets/js/jquery.min.js"></script> 
+  <!-- <script type="text/javascript" src="https://connect.facebook.net/en_US/sdk/xfbml.customerchat.js"></script> -->
 </head>
 <body class="cms-index-index cms-home-page">
 <app-root></app-root>
