--- a/src/index.html
+++ b/src/index.html
@@ -2,12 +2,12 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
-  <title>ecommerce portal</title>
+  <title>DMC Store</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <meta http-equiv="x-ua-compatible" content="ie=edge">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
-  <meta name="description" content="best template, template free, responsive theme, fashion store, responsive theme, responsive html theme, Premium website templates, web templates, Multi-Purpose Responsive HTML5 Template">
-  <meta name="keywords" content="bootstrap, ecommerce, fashion, layout, responsive, responsive template, responsive template download, responsive theme, retail, shop, shopping, store, Premium website templates, web templates, Multi-Purpose Responsive HTML5 Template"/>
+  <meta name="description" content="DMC storer - Địa chỉ Build Pc gaming, bán laptop gaming, laptop văn phòng, ghế công thái học, gaming gear, card màn hình, rtx 4070, rtx 4060, màn hình gaming uy tín số một Hà Nội. Bảo hành nhanh chóng, khuyến mại đủ, trả góp 0%">
+  <meta name="keywords" content="pc gaming, laptop gaming, laptop văn phòng, ghế công thái học, ghế gaming, gaming gear, laptop acer, Rtx 4070, rtx 4060, Vga cũ, vga like new, màn hình máy tính, acer nitro, laptop asus"/>
   <!-- CSS Style -->
   <link http://fonts.googleapis.com/css?family=Open+Sans:400,600,300,800,700,400italic" rel='stylesheet' type='text/css'>
   <link https://fonts.googleapis.com/css?family=Roboto:400,400italic,500,500italic,700' rel='stylesheet' type='text/css'>
