--- a/src/index.html
+++ b/src/index.html
@@ -5,7 +5,7 @@
   <title>DMC Store</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <meta http-equiv="x-ua-compatible" content="ie=edge">
-  <link rel="icon" type="image/x-icon" href="favicon.ico">
+  <link rel="icon" type="image/x-icon" href="icon2.ico">
   <meta name="description" content="DMC storer - Địa chỉ Build Pc gaming, bán laptop gaming, laptop văn phòng, ghế công thái học, gaming gear, card màn hình, rtx 4070, rtx 4060, màn hình gaming uy tín số một Hà Nội. Bảo hành nhanh chóng, khuyến mại đủ, trả góp 0%">
   <meta name="keywords" content="pc gaming, laptop gaming, laptop văn phòng, ghế công thái học, ghế gaming, gaming gear, laptop acer, Rtx 4070, rtx 4060, Vga cũ, vga like new, màn hình máy tính, acer nitro, laptop asus"/>
   <!-- CSS Style -->
@@ -16,6 +16,7 @@
   <link rel="stylesheet" type="text/html" href="./style.css">
   <script type="text/javascript" src="./assets/js/jquery.min.js"></script> 
   <script type="text/javascript" src="https://connect.facebook.net/vi_VN/sdk/xfbml.customerchat.js"></script>
+  <!-- <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyA66KwUrjxcFG5u0exynlJ45CrbrNe3hEc"></script> -->
 </head>
 <body class="cms-index-index cms-home-page">
 <app-root></app-root>
