--- a/src/index.html
+++ b/src/index.html
@@ -18,7 +18,7 @@
   <script type="text/javascript" src="https://connect.facebook.net/vi_VN/sdk/xfbml.customerchat.js"></script>
   <!-- <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyA66KwUrjxcFG5u0exynlJ45CrbrNe3hEc"></script> -->
   <div id="fb-root"></div>
-  <script async defer crossorigin="anonymous" src="https://connect.facebook.net/vi_VN/sdk.js#xfbml=1&version=v17.0" nonce="nIFyNphN"></script>
+  <script async defer crossorigin="anonymous" src="https://connect.facebook.net/vi_VN/sdk.js#xfbml=1&version=v17.0" nonce="bnaBW9Td"></script>
 </head>
 <body class="cms-index-index cms-home-page">
 <app-root></app-root>
